# uvm-python

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  CHANGELOG  CONTRIBUTING.md  LICENSE  Makefile  PortingSV2Python.md  README.md  TODO.md  check_errors.sh  gen_ctags.sh  install_iverilog.sh  pyrightconfig.json  pytype.cfg  setup.cfg  setup.py  test.py
ci/: check_errors.sh  install_ghdl.sh  install_iverilog.sh  install_verilator.sh  requirements.txt
devscripts/: create_release.pl  create_release.py  dev_requirements.txt
docs/: Makefile  requirements.txt
test/: .gitignore  Makefile  test_uvm.py  test_uvm_events.py  test_uvm_tlm.py
unit/: test_sv.py  test_uvm_analysis_port.py  test_uvm_callback.py  test_uvm_cmdline_processor.py  test_uvm_component.py  test_uvm_config_db.py  test_uvm_coreservice.py  test_uvm_domain.py  test_uvm_factory.py  test_uvm_globals.py  test_uvm_hdl.py  test_uvm_mailbox.py  test_uvm_misc.py  test_uvm_object.py  test_uvm_object_defines.py  test_uvm_objection.py  test_uvm_packer.py  test_uvm_phase.py  test_uvm_pool.py  test_uvm_port_base.py  test_uvm_ports.py  test_uvm_printer.py  test_uvm_queue.py  test_uvm_reg.py  test_uvm_reg_block.py  test_uvm_reg_field.py  test_uvm_reg_map.py  test_uvm_reg_model.py  test_uvm_reg_predictor.py  test_uvm_registry.py  test_uvm_report_catcher.py  test_uvm_report_handler.py  test_uvm_report_message.py  test_uvm_report_object.py  test_uvm_report_server.py  test_uvm_resource.py  test_uvm_resource_db.py  test_uvm_root.py  test_uvm_scope_stack.py  test_uvm_sequencer_base.py  (+5 more)
(+615 files in other folders)
