[metadata]
# replace with your username:
name = uvm-python
author = Tuomas Poikela
author_email = tuomas.sakari.poikela@gmail.com
description = UVM for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tpoikela/uvm-python
project_urls =
    Bug Tracker = https://github.com/tpoikela/uvm-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Apache 2.0
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
packages = find:
python_requires = >=3.6
